--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "mocha": {
     "colors": true,
     "recursive": [
-      "src/**/*.test.ts"
+      "src/leetcode/**/*.test.ts"
     ],
     "reporter": [
       "mochawesome"
